--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-.ipynb_checkpoints
+# Python cache files
+__pycache__/
+*.py[cod]
+
+# Jupyter notebook checkpoints
+.ipynb_checkpoints/
+
+# VS Code settings (optional)
+.vscode/
+
+# OS-specific files
+Thumbs.db  # Windows
+
+.venv/
